infra/airflow/custom-resources/ingress_route_tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: airflow-db-route
spec:
  entryPoints:
    - postgres-airflow
  routes:
    - match: HostSNI(`*`)
      services:
        - name: airflow-cnpg-db-rw
          port: 5432
